--- a/account.html
+++ b/account.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="css/account.css">
 </head>
 <body>
-    <div class="navbar row">
-        <nav class="row">
+    <!-- #region navbar -->
+    <div class="navbar ">
+        <nav >
             <a href="index.html" class="logo">LO<br>GO</a>
-            <ul class="menuItems row">
+            <ul class="menuItems">
                 <li>
-                    <a href="index.html" class="column">
+                    <a href="index.html">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.71205 19.2165C0.731983 14.7378 0.979718 10.7505 1.19878 9.21903C1.22156 9.18083 1.26188 9.12096 1.3271 9.03762C1.47501 8.84861 1.70084 8.60214 2.00458 8.30278C2.60899 7.7071 3.44945 6.97258 4.4089 6.17899C6.32335 4.59548 8.64444 2.83178 10.3366 1.57188C11.3568 0.812318 12.7404 0.80911 13.7633 1.5639C15.4695 2.82291 17.8111 4.58864 19.7304 6.17389C20.6926 6.96861 21.53 7.70271 22.1245 8.29655C22.4236 8.59528 22.6406 8.8382 22.778 9.02132C22.8258 9.08503 22.8572 9.13255 22.8767 9.16498C22.9852 10.7948 23.2496 14.7791 22.3719 19.2371C22.1475 20.3774 21.7303 21.0875 21.1279 21.5714C20.5005 22.0755 19.5539 22.4301 18.0887 22.6131C17.3588 22.7043 16.6359 22.7793 15.9182 22.8382C13.272 23.0553 10.6918 23.0539 8.08393 22.8342C7.39282 22.776 6.69945 22.7024 6.00208 22.6135C4.54036 22.427 3.60663 22.0692 2.98443 21.5644C2.38303 21.0765 1.96249 20.361 1.71205 19.2165ZM1.18016 9.25341C1.18007 9.25344 1.18083 9.25163 1.1827 9.2479C1.18118 9.25152 1.18025 9.25338 1.18016 9.25341ZM22.9016 9.2113C22.9014 9.21126 22.9003 9.20897 22.8986 9.20457C22.9008 9.20914 22.9017 9.21135 22.9016 9.2113Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
@@ -22,14 +23,14 @@
                     </a>
                 </li>
                 <li class="dropdown">
-                    <a href="" class="column">
+                    <a href="" >
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 5.5C1 6.60949 1.06075 7.43281 1.19863 8.0532C1.33399 8.66225 1.53001 9.01274 1.75864 9.24136C1.98726 9.46999 2.33775 9.66601 2.9468 9.80137C3.56719 9.93925 4.39051 10 5.5 10C6.60949 10 7.43281 9.93925 8.0532 9.80137C8.66225 9.66601 9.01274 9.46999 9.24136 9.24136C9.46999 9.01274 9.66601 8.66225 9.80137 8.0532C9.93925 7.43281 10 6.60949 10 5.5C10 4.39051 9.93925 3.56719 9.80137 2.9468C9.66601 2.33775 9.46999 1.98726 9.24136 1.75864C9.01274 1.53001 8.66225 1.33399 8.0532 1.19863C7.43281 1.06075 6.60949 1 5.5 1C4.39051 1 3.56719 1.06075 2.9468 1.19863C2.33775 1.33399 1.98726 1.53001 1.75864 1.75864C1.53001 1.98726 1.33399 2.33775 1.19863 2.9468C1.06075 3.56719 1 4.39051 1 5.5Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M1 18.5C1 19.6095 1.06075 20.4328 1.19863 21.0532C1.33399 21.6622 1.53001 22.0127 1.75864 22.2414C1.98726 22.47 2.33775 22.666 2.9468 22.8014C3.56719 22.9392 4.39051 23 5.5 23C6.60949 23 7.43281 22.9392 8.0532 22.8014C8.66225 22.666 9.01274 22.47 9.24136 22.2414C9.46999 22.0127 9.66601 21.6622 9.80137 21.0532C9.93925 20.4328 10 19.6095 10 18.5C10 17.3905 9.93925 16.5672 9.80137 15.9468C9.66601 15.3378 9.46999 14.9873 9.24136 14.7586C9.01274 14.53 8.66225 14.334 8.0532 14.1986C7.43281 14.0608 6.60949 14 5.5 14C4.39051 14 3.56719 14.0608 2.9468 14.1986C2.33775 14.334 1.98726 14.53 1.75864 14.7586C1.53001 14.9873 1.33399 15.3378 1.19863 15.9468C1.06075 16.5672 1 17.3905 1 18.5Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M14 5.5C14 6.60949 14.0608 7.43281 14.1986 8.0532C14.334 8.66225 14.53 9.01274 14.7586 9.24136C14.9873 9.46999 15.3378 9.66601 15.9468 9.80137C16.5672 9.93925 17.3905 10 18.5 10C19.6095 10 20.4328 9.93925 21.0532 9.80137C21.6622 9.66601 22.0127 9.46999 22.2414 9.24136C22.47 9.01274 22.666 8.66225 22.8014 8.0532C22.9392 7.43281 23 6.60949 23 5.5C23 4.39051 22.9392 3.56719 22.8014 2.9468C22.666 2.33775 22.47 1.98726 22.2414 1.75864C22.0127 1.53001 21.6622 1.33399 21.0532 1.19863C20.4328 1.06075 19.6095 1 18.5 1C17.3905 1 16.5672 1.06075 15.9468 1.19863C15.3378 1.33399 14.9873 1.53001 14.7586 1.75864C14.53 1.98726 14.334 2.33775 14.1986 2.9468C14.0608 3.56719 14 4.39051 14 5.5Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M14 18.5C14 19.6095 14.0608 20.4328 14.1986 21.0532C14.334 21.6622 14.53 22.0127 14.7586 22.2414C14.9873 22.47 15.3378 22.666 15.9468 22.8014C16.5672 22.9392 17.3905 23 18.5 23C19.6095 23 20.4328 22.9392 21.0532 22.8014C21.6622 22.666 22.0127 22.47 22.2414 22.2414C22.47 22.0127 22.666 21.6622 22.8014 21.0532C22.9392 20.4328 23 19.6095 23 18.5C23 17.3905 22.9392 16.5672 22.8014 15.9468C22.666 15.3378 22.47 14.9873 22.2414 14.7586C22.0127 14.53 21.6622 14.334 21.0532 14.1986C20.4328 14.0608 19.6095 14 18.5 14C17.3905 14 16.5672 14.0608 15.9468 14.1986C15.3378 14.334 14.9873 14.53 14.7586 14.7586C14.53 14.9873 14.334 15.3378 14.1986 15.9468C14.0608 16.5672 14 17.3905 14 18.5Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                        <div class="row">
+                        <div>
                             <span>دسته بندی ها</span>
                             <svg width="10" height="6" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M13 1L7 7L1 1" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -50,29 +51,7 @@
                     </a>
                 </li>
             </ul>
-            <ul class="row-reverse float-left">
-                <li>
-                    <a href="" class="column">
-                        <svg width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 19C1 19.9693 1.11783 20.618 1.34327 21.0791C1.5502 21.5023 1.88679 21.8473 2.51687 22.1337C3.17962 22.4349 4.14546 22.6599 5.5602 22.8028C6.96536 22.9448 8.74527 23 11 23C13.2547 23 15.0346 22.9448 16.4398 22.8028C17.8545 22.6599 18.8204 22.4349 19.4831 22.1337C20.1132 21.8473 20.4498 21.5023 20.6567 21.0791C20.8822 20.618 21 19.9693 21 19C21 18.0307 20.8822 17.382 20.6567 16.9209C20.4498 16.4977 20.1132 16.1527 19.4831 15.8663C18.8204 15.5651 17.8545 15.3401 16.4398 15.1972C15.0346 15.0552 13.2547 15 11 15C8.74527 15 6.96536 15.0552 5.5602 15.1972C4.14546 15.3401 3.17962 15.5651 2.51687 15.8663C1.88679 16.1527 1.5502 16.4977 1.34327 16.9209C1.11783 17.382 1 18.0307 1 19Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <circle r="5" transform="matrix(-1 0 0 1 11 6)" stroke="#212135" stroke-width="2"/>
-                        </svg>
-                        <span>حساب کاربری</span>
-                    </a>
-                </li>
-                <li class="bascket">
-                    <a href="" class="column">
-                        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <ellipse cx="9.26315" cy="20.1804" rx="1.81955" ry="1.81955" fill="#212135"/>
-                            <ellipse cx="15.3283" cy="20.1804" rx="1.81955" ry="1.81955" fill="#212135"/>
-                            <path d="M1.04761 1.04761C2.89111 1.96936 3.8045 2.77516 3.8045 5.01754M3.8045 5.01754C3.8045 14.1153 6.23057 15.9348 12.2957 15.9348C18.3609 15.9348 20.787 14.1153 20.787 6.83708C20.787 5.81565 20.1804 5.01754 18.9674 5.01754C17.7544 5.01754 7.845 5.01754 3.8045 5.01754Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <div class="row">
-                            <span>سبد خرید</span>
-                            <span class="badge"> 5 </span>
-                        </div>
-                    </a>
-                </li>
+            <ul>
                 <li>
                     <form action="" method="GET" class="searchBox">
                         <input type="search" name="q" id="q" required>
@@ -85,13 +64,37 @@
                         </button>
                     </form>
                 </li>
+                <li class="bascket">
+                    <a href="" >
+                        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="9.26315" cy="20.1804" rx="1.81955" ry="1.81955" fill="#212135"/>
+                            <ellipse cx="15.3283" cy="20.1804" rx="1.81955" ry="1.81955" fill="#212135"/>
+                            <path d="M1.04761 1.04761C2.89111 1.96936 3.8045 2.77516 3.8045 5.01754M3.8045 5.01754C3.8045 14.1153 6.23057 15.9348 12.2957 15.9348C18.3609 15.9348 20.787 14.1153 20.787 6.83708C20.787 5.81565 20.1804 5.01754 18.9674 5.01754C17.7544 5.01754 7.845 5.01754 3.8045 5.01754Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <div >
+                            <span>سبد خرید</span>
+                            <span class="badge"> 5 </span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="account.html" class="column">
+                        <svg width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 19C1 19.9693 1.11783 20.618 1.34327 21.0791C1.5502 21.5023 1.88679 21.8473 2.51687 22.1337C3.17962 22.4349 4.14546 22.6599 5.5602 22.8028C6.96536 22.9448 8.74527 23 11 23C13.2547 23 15.0346 22.9448 16.4398 22.8028C17.8545 22.6599 18.8204 22.4349 19.4831 22.1337C20.1132 21.8473 20.4498 21.5023 20.6567 21.0791C20.8822 20.618 21 19.9693 21 19C21 18.0307 20.8822 17.382 20.6567 16.9209C20.4498 16.4977 20.1132 16.1527 19.4831 15.8663C18.8204 15.5651 17.8545 15.3401 16.4398 15.1972C15.0346 15.0552 13.2547 15 11 15C8.74527 15 6.96536 15.0552 5.5602 15.1972C4.14546 15.3401 3.17962 15.5651 2.51687 15.8663C1.88679 16.1527 1.5502 16.4977 1.34327 16.9209C1.11783 17.382 1 18.0307 1 19Z" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <circle r="5" transform="matrix(-1 0 0 1 11 6)" stroke="#212135" stroke-width="2"/>
+                        </svg>
+                        <span>حساب کاربری</span>
+                    </a>
+                </li>
+                
             </ul>
         </nav>
     </div>
+    <!-- #endregion -->
 
     <div class="account">
         <input type="checkbox" name="change" id="change" class="changeForm">
-        <form class="login column" action="">
+        <form class="login" action="">
             <div>
                 <label for="username">نام کاربری / شماره موبایل</label>
                 <input type="text" name="username" id="username" placeholder="نام کاربری یا شماره موبایل خود را وارد کنید">
@@ -100,16 +103,16 @@
                 <label for="password">رمز عبور</label>
                 <input type="password" name="password" id="password" placeholder="رمز عبور خود را وارد کنید">
             </div>
-            <div class="row float-left remember-forget">
-                <div class="w-50">
+            <div class="remember-forget">
+                <div>
                     <input type="checkbox" name="rememberMe" id="rememberMe">
                     <label for="rememberMe">مرا به خاطر بسپار</label>
                 </div>
-                <a href="" class="w-50">رمزم را فراموش کرده ام</a>
+                <a href="">رمزم را فراموش کرده ام</a>
             </div>
             <button type="submit" class="loginButton">ورود به حساب کاربری</button>
         </form>
-        <form class="signup column" action="">
+        <form class="signup" action="">
             <div>
                 <label for="phone" >شماره موبایل</label>
                 <input type="tel" data-inputmask="'mask': '(9999)-999-9999'" maxlength="17" name="phone" id="phone" placeholder="شماره موبایل خود را وارد کنید" >
