Adding Payment info

--- a/sendInfo.html
+++ b/sendInfo.html
@@ -329,7 +329,7 @@
     </div>
     <!-- #endregion -->
 
-    <!-- #region cart cardOverview -->
+    <!-- #region cart send info -->
     <div class="oveview row m-4">
         <div class="top col-12 d-flex">
             <h3>تکمیل خرید</h3>
@@ -396,6 +396,12 @@
                     <span>(سفارشات سریع تر به اداره پست ارسال میشوند و با پست پیشتاز در <strong>حداکثر 3 روز کاری</strong> به دست شما میرسند.)</span>
                 </div>
             </div>
+            <a href="cardOverview.html" class="link">
+                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 1L7 7L1 13" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                بازگشت به سبد خرید
+            </a>
         </main>
         <aside class="col">
             <div>
@@ -418,6 +424,10 @@
                     </svg>
                 </span>
                 <strong>0 <sub>تومان</sub></strong>
+            </div>
+            <div>
+                <span>هزینه ارسال:</span>
+                <strong>رایگان</strong>
             </div>
             <div>
                 <span>مبلغ قابل پرداخت:</span>
