fix jqury not found

--- a/sendInfo.html
+++ b/sendInfo.html
@@ -534,11 +534,11 @@
     </footer>
     <!-- #endregion -->
 
-<script src="/js/jquery.js"></script>
-<script src="/js/dropdown.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/dropdown.js"></script>
 <script>
     $(function(){
-        $('.modal').fadeOut(0);
+        // $('.modal').fadeOut(0);
         $('#addAddress').click(event=>{
             event.preventDefault();
             $('#addressModal').fadeToggle();
