--- a/payment.html
+++ b/payment.html
@@ -407,7 +407,7 @@
                 <small class="discount">70,000-</small>
                 <strong>2,450,000 <sub>تومان</sub></strong>
             </div>
-            <button class="btn btn-warning">مرحله بعد</button>
+            <button class="btn btn-warning">ثبت نهایی و پرداخت</button>
         </aside>
     </div>
     <!-- #endregion -->
