add backet panel to all pages - change colors

--- a/cardOverview.html
+++ b/cardOverview.html
@@ -205,7 +205,7 @@
                                     <span>جمع کل:</span>
                                     <strong>2,400,000 <sub>تومان</sub></strong>
                                 </div>
-                                <button type="submit" class="btn btn-warning">ثبت سفارش</button>
+                                <a href="cardOverview.html" class="btn btn-primary">ثبت سفارش</a>
                             </div>
                         </div>
 
@@ -500,7 +500,7 @@
                 <span>مبلغ قابل پرداخت:</span>
                 <strong>2,520,000 <sub>تومان</sub></strong>
             </div>
-            <button class="btn btn-warning">مرحله بعد</button>
+            <a href="sendInfo.html" class="btn btn-primary">مرحله بعد</a>
         </aside>
     </div>
     <!-- #endregion -->
