--- a/index.html
+++ b/index.html
@@ -78,6 +78,142 @@
                             <span class="badge"> 5 </span>
                         </div>
                     </a>
+                    <div class="basketItems">
+                        <div class="items">
+                            <div class="top">
+                                <h5>کالا ها</h5>
+                                <span>(3 کالا)</span>
+                                <a href="">
+                                    مشاهده سبد خرید
+                                    <svg width="7" height="11" viewBox="0 0 7 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M5.375 9.125L1.625 5.375L5.375 1.625" stroke="#0055FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </div>
+                            <ul>
+                                <li>
+                                    <a href=""><img src="./imgs/singleImage.png" alt="img"></a>
+                                    <div class="content">
+                                        <a href="">نام کالا اینجا نمایش داده میشود</a>
+                                        <div class="details">
+                                            <div class="count">
+                                                تعداد کالا
+                                                <div>3</div>
+                                            </div>
+                                            <div class="color">
+                                                رنگ
+                                                <div style="background-color: #0055FF;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="price">
+                                            قیمت کالا
+                                            <strong>230,000 <sub>تومان</sub> </strong>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-danger">
+                                        <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2.27149 11.0328C2.31673 11.2362 2.36005 11.4324 2.40186 11.6217C2.643 12.7135 2.83384 13.5775 3.05039 14.2929C3.30275 15.1264 3.55713 15.6366 3.86699 15.9815C4.44808 16.6285 5.50524 16.9998 8.4999 16.9998C11.4946 16.9998 12.5517 16.6285 13.1328 15.9815C13.4427 15.6366 13.697 15.1264 13.9494 14.2929C14.166 13.5775 14.3568 12.7135 14.5979 11.6217C14.6397 11.4324 14.6831 11.2362 14.7283 11.0328C15.306 8.43485 14.8987 7.25557 14.1355 6.61675C13.7057 6.25704 13.0568 5.96827 12.1 5.77556C11.1459 5.58341 9.95376 5.49994 8.4999 5.49994C7.04603 5.49994 5.85388 5.58341 4.8998 5.77556C3.94296 5.96827 3.29407 6.25704 2.86434 6.61674C2.10113 7.25557 1.69381 8.43485 2.27149 11.0328Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8.49996 8.99988V13.4998M5.5 8.99988V13.4998M11.4999 8.99988V13.4998" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.00007 1.30202V1C7.00007 0.447715 7.44779 0 8.00007 0H9.00003C9.55232 0 10 0.447715 10 1V1.30227C12.7856 1.5014 14.6708 2.23423 15.7656 2.89316C16.2388 3.17795 16.3915 3.79242 16.1067 4.26561C15.8219 4.7388 15.2075 4.89153 14.7343 4.60674C13.8 4.04442 11.8016 3.24997 8.50003 3.24997C5.18369 3.24997 3.13258 4.05078 2.29035 4.59146C1.8256 4.88983 1.20697 4.75494 0.908607 4.29018C0.610244 3.82543 0.745134 3.2068 1.20989 2.90843C2.265 2.23108 4.20678 1.50027 7.00007 1.30202Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <a href=""><img src="./imgs/singleImage.png" alt="img"></a>
+                                    <div class="content">
+                                        <a href="">نام کالا اینجا نمایش داده میشود</a>
+                                        <div class="details">
+                                            <div class="count">
+                                                تعداد کالا
+                                                <div>3</div>
+                                            </div>
+                                            <div class="color">
+                                                رنگ
+                                                <div style="background-color: #0055FF;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="price">
+                                            قیمت کالا
+                                            <strong>230,000 <sub>تومان</sub> </strong>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-danger">
+                                        <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2.27149 11.0328C2.31673 11.2362 2.36005 11.4324 2.40186 11.6217C2.643 12.7135 2.83384 13.5775 3.05039 14.2929C3.30275 15.1264 3.55713 15.6366 3.86699 15.9815C4.44808 16.6285 5.50524 16.9998 8.4999 16.9998C11.4946 16.9998 12.5517 16.6285 13.1328 15.9815C13.4427 15.6366 13.697 15.1264 13.9494 14.2929C14.166 13.5775 14.3568 12.7135 14.5979 11.6217C14.6397 11.4324 14.6831 11.2362 14.7283 11.0328C15.306 8.43485 14.8987 7.25557 14.1355 6.61675C13.7057 6.25704 13.0568 5.96827 12.1 5.77556C11.1459 5.58341 9.95376 5.49994 8.4999 5.49994C7.04603 5.49994 5.85388 5.58341 4.8998 5.77556C3.94296 5.96827 3.29407 6.25704 2.86434 6.61674C2.10113 7.25557 1.69381 8.43485 2.27149 11.0328Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8.49996 8.99988V13.4998M5.5 8.99988V13.4998M11.4999 8.99988V13.4998" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.00007 1.30202V1C7.00007 0.447715 7.44779 0 8.00007 0H9.00003C9.55232 0 10 0.447715 10 1V1.30227C12.7856 1.5014 14.6708 2.23423 15.7656 2.89316C16.2388 3.17795 16.3915 3.79242 16.1067 4.26561C15.8219 4.7388 15.2075 4.89153 14.7343 4.60674C13.8 4.04442 11.8016 3.24997 8.50003 3.24997C5.18369 3.24997 3.13258 4.05078 2.29035 4.59146C1.8256 4.88983 1.20697 4.75494 0.908607 4.29018C0.610244 3.82543 0.745134 3.2068 1.20989 2.90843C2.265 2.23108 4.20678 1.50027 7.00007 1.30202Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <a href=""><img src="./imgs/singleImage.png" alt="img"></a>
+                                    <div class="content">
+                                        <a href="">نام کالا اینجا نمایش داده میشود</a>
+                                        <div class="details">
+                                            <div class="count">
+                                                تعداد کالا
+                                                <div>3</div>
+                                            </div>
+                                            <div class="color">
+                                                رنگ
+                                                <div style="background-color: #0055FF;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="price">
+                                            قیمت کالا
+                                            <strong>230,000 <sub>تومان</sub> </strong>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-danger">
+                                        <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2.27149 11.0328C2.31673 11.2362 2.36005 11.4324 2.40186 11.6217C2.643 12.7135 2.83384 13.5775 3.05039 14.2929C3.30275 15.1264 3.55713 15.6366 3.86699 15.9815C4.44808 16.6285 5.50524 16.9998 8.4999 16.9998C11.4946 16.9998 12.5517 16.6285 13.1328 15.9815C13.4427 15.6366 13.697 15.1264 13.9494 14.2929C14.166 13.5775 14.3568 12.7135 14.5979 11.6217C14.6397 11.4324 14.6831 11.2362 14.7283 11.0328C15.306 8.43485 14.8987 7.25557 14.1355 6.61675C13.7057 6.25704 13.0568 5.96827 12.1 5.77556C11.1459 5.58341 9.95376 5.49994 8.4999 5.49994C7.04603 5.49994 5.85388 5.58341 4.8998 5.77556C3.94296 5.96827 3.29407 6.25704 2.86434 6.61674C2.10113 7.25557 1.69381 8.43485 2.27149 11.0328Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8.49996 8.99988V13.4998M5.5 8.99988V13.4998M11.4999 8.99988V13.4998" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.00007 1.30202V1C7.00007 0.447715 7.44779 0 8.00007 0H9.00003C9.55232 0 10 0.447715 10 1V1.30227C12.7856 1.5014 14.6708 2.23423 15.7656 2.89316C16.2388 3.17795 16.3915 3.79242 16.1067 4.26561C15.8219 4.7388 15.2075 4.89153 14.7343 4.60674C13.8 4.04442 11.8016 3.24997 8.50003 3.24997C5.18369 3.24997 3.13258 4.05078 2.29035 4.59146C1.8256 4.88983 1.20697 4.75494 0.908607 4.29018C0.610244 3.82543 0.745134 3.2068 1.20989 2.90843C2.265 2.23108 4.20678 1.50027 7.00007 1.30202Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                                <li>
+                                    <a href=""><img src="./imgs/singleImage.png" alt="img"></a>
+                                    <div class="content">
+                                        <a href="">نام کالا اینجا نمایش داده میشود</a>
+                                        <div class="details">
+                                            <div class="count">
+                                                تعداد کالا
+                                                <div>3</div>
+                                            </div>
+                                            <div class="color">
+                                                رنگ
+                                                <div style="background-color: #0055FF;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="price">
+                                            قیمت کالا
+                                            <strong>230,000 <sub>تومان</sub> </strong>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-danger">
+                                        <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2.27149 11.0328C2.31673 11.2362 2.36005 11.4324 2.40186 11.6217C2.643 12.7135 2.83384 13.5775 3.05039 14.2929C3.30275 15.1264 3.55713 15.6366 3.86699 15.9815C4.44808 16.6285 5.50524 16.9998 8.4999 16.9998C11.4946 16.9998 12.5517 16.6285 13.1328 15.9815C13.4427 15.6366 13.697 15.1264 13.9494 14.2929C14.166 13.5775 14.3568 12.7135 14.5979 11.6217C14.6397 11.4324 14.6831 11.2362 14.7283 11.0328C15.306 8.43485 14.8987 7.25557 14.1355 6.61675C13.7057 6.25704 13.0568 5.96827 12.1 5.77556C11.1459 5.58341 9.95376 5.49994 8.4999 5.49994C7.04603 5.49994 5.85388 5.58341 4.8998 5.77556C3.94296 5.96827 3.29407 6.25704 2.86434 6.61674C2.10113 7.25557 1.69381 8.43485 2.27149 11.0328Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8.49996 8.99988V13.4998M5.5 8.99988V13.4998M11.4999 8.99988V13.4998" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.00007 1.30202V1C7.00007 0.447715 7.44779 0 8.00007 0H9.00003C9.55232 0 10 0.447715 10 1V1.30227C12.7856 1.5014 14.6708 2.23423 15.7656 2.89316C16.2388 3.17795 16.3915 3.79242 16.1067 4.26561C15.8219 4.7388 15.2075 4.89153 14.7343 4.60674C13.8 4.04442 11.8016 3.24997 8.50003 3.24997C5.18369 3.24997 3.13258 4.05078 2.29035 4.59146C1.8256 4.88983 1.20697 4.75494 0.908607 4.29018C0.610244 3.82543 0.745134 3.2068 1.20989 2.90843C2.265 2.23108 4.20678 1.50027 7.00007 1.30202Z" fill="white"/>
+                                        </svg>
+                                    </button>
+                                </li>
+                            </ul>
+                            <div class="goBasket">
+                                <div class="totalPrice">
+                                    <span>جمع کل:</span>
+                                    <strong>2,400,000 <sub>تومان</sub></strong>
+                                </div>
+                                <a href="cardOverview.html" class="btn btn-primary">ثبت سفارش</a>
+                            </div>
+                        </div>
+
+                        <div class="NoBasketItem" style="display: none;">
+                            <span></span>
+                            کالایی برای خرید انتخاب نکرده اید.
+                        </div>
+                    </div>
                 </li>
                 <li>
                     <a href="account.html" class="column">
