--- a/payment.html
+++ b/payment.html
@@ -205,7 +205,7 @@
                                     <span>جمع کل:</span>
                                     <strong>2,400,000 <sub>تومان</sub></strong>
                                 </div>
-                                <button type="submit" class="btn btn-warning">ثبت سفارش</button>
+                                <a href="cardOverview.html" class="btn btn-primary">ثبت سفارش</a>
                             </div>
                         </div>
 
@@ -230,7 +230,7 @@
     </div>
     <!-- #endregion -->
 
-    <!-- #region cart cardOverview -->
+    <!-- #region cart payment -->
     <div class="oveview row m-4">
         <div class="top col-12 d-flex">
             <h3>تکمیل خرید</h3>
@@ -407,7 +407,7 @@
                 <small class="discount">70,000-</small>
                 <strong>2,450,000 <sub>تومان</sub></strong>
             </div>
-            <button class="btn btn-warning">ثبت نهایی و پرداخت</button>
+            <a class="btn btn-primary">ثبت نهایی</a>
         </aside>
     </div>
     <!-- #endregion -->
