adding factor page

--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اطلاعات ارسال</title>
+    <title>اطلاعات پرداخت</title>
     <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/controls.css">
@@ -231,7 +231,7 @@
     <!-- #endregion -->
 
     <!-- #region cart payment -->
-    <div class="oveview row m-4">
+    <div class="overview row m-4">
         <div class="top col-12 d-flex">
             <h3>تکمیل خرید</h3>
             <div class="levels mx-4">
