--- a/sendInfo.html
+++ b/sendInfo.html
@@ -330,7 +330,7 @@
     <!-- #endregion -->
 
     <!-- #region cart send info -->
-    <div class="oveview row m-4">
+    <div class="overview row m-4">
         <div class="top col-12 d-flex">
             <h3>تکمیل خرید</h3>
             <div class="levels mx-4">
