--- a/account.html
+++ b/account.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ورود به حساب کاربری</title>
+    <link rel="stylesheet" href="css/Bootstrap/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/controls.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/account.css">
 </head>
